# webnews-parser

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  adblock_rules.txt  books.csv  cs_matchups.csv  cs_news.csv  cs_news_text.csv  cs_past_matches.csv  cs_players.csv  cs_teams.csv  cs_tournaments.csv  csnews.csv  docker-compose.yml  paragraph_text.csv  pyproject.toml  readme.md  requirements.txt  rufus.py  scrapinghub.yml  scrapy.cfg  setup.py
.scrapy/httpcache/NewsSpider/00/0025268533f0c4f495647fe008f7141a6290e49a/: meta  pickled_meta  request_body  response_headers
.scrapy/httpcache/NewsSpider/00/002add413a963a27325df58fa59eeec7b5af8e53/: meta  pickled_meta  request_body  response_body  response_headers
.scrapy/httpcache/NewsSpider/00/002e90252e8171fdc7a4949ffbabdd7c6b07e84a/: meta  pickled_meta  request_body
.scrapy/httpcache/NewsSpider/00/009b0963e0dde9604f9c86df7e152235a7cb47d0/: meta  pickled_meta  request_body  request_headers  response_headers
.scrapy/httpcache/NewsSpider/01/010065c190dffea306f6f270255335d29a73dd8a/: meta  pickled_meta  request_body  request_headers  response_headers
.scrapy/httpcache/NewsSpider/01/01506813afcdebfa643011b45bd0ff1ed0e48549/: meta  pickled_meta  request_body  request_headers  response_headers
.scrapy/httpcache/NewsSpider/01/01e680279a0b37a600f4972c3b9c4c7d95d64da2/: meta  pickled_meta  request_body  response_body
.scrapy/httpcache/NewsSpider/01/01e78ba5bfc06fe9befee7a49ff5a7e7c6b4d3d9/: meta  pickled_meta  request_body  response_body
.scrapy/httpcache/NewsSpider/02/020bd10e077383ee7dfc18238bd44cb60ab67b80/: meta  pickled_meta  request_body  response_body
.scrapy/httpcache/NewsSpider/02/0232162d3ed8f75d17055e52522580ae5e6d4f08/: meta  pickled_meta  request_body  response_body  response_headers
.scrapy/httpcache/NewsSpider/02/023c336099da15cf8092abbf2e37c2bdbef875c1/: meta  pickled_meta  request_body  response_body
.scrapy/httpcache/NewsSpider/02/0262b52334b25d282ae8534f3d447e3f6ebffb0a/: meta  pickled_meta  request_body  response_headers
.scrapy/httpcache/NewsSpider/02/028f108281e0754b49b616d740b312e21057bd29/: meta  pickled_meta  request_body  response_headers
.scrapy/httpcache/NewsSpider/02/02c1c8f2aca4e638151623e70ed235c73c662469/: meta  pickled_meta  request_body  response_headers
.scrapy/httpcache/NewsSpider/02/02e00e96b5012799c3ac2b9af62155d1fa5394d5/: meta  pickled_meta  request_body  request_headers  response_headers
.scrapy/httpcache/NewsSpider/03/0335bc17a3d293ce2a79a73dbb96bca76ddcc15d/: meta  pickled_meta  request_body  response_headers
.scrapy/httpcache/NewsSpider/03/033fde4e2be7d3aeacf4d1a754e49d468294f6d7/: meta  pickled_meta  request_body  response_headers
.scrapy/httpcache/NewsSpider/03/0348da521f38bea860865f89fe1d216e2a601a65/: meta  pickled_meta  request_body  request_headers  response_headers
.scrapy/httpcache/NewsSpider/03/0394e42cb6cbea9b913cd5e29e0054398ae3f7d3/: meta  pickled_meta  request_body  response_headers
.scrapy/httpcache/NewsSpider/03/03a1e8297ccd0542167edcf7a3a74d1e577101b1/: meta  pickled_meta  request_body  response_headers
.scrapy/httpcache/NewsSpider/03/03fda1388f8ac672f914b91f2647ef5aa4229671/: meta  pickled_meta  request_body  request_headers  response_headers
.scrapy/httpcache/NewsSpider/04/04163c3c5c9cc55d3f198006175ef83a76ac38c4/: meta  pickled_meta  request_body  response_headers
.scrapy/httpcache/NewsSpider/04/042ab75b8f363deb35322b90e311483dba5951ae/: meta  pickled_meta  request_body  request_headers  response_headers
.scrapy/httpcache/NewsSpider/04/04365653154fa3c6aca10f6db6dc90f12123b68c/: meta  pickled_meta  request_body  request_headers  response_headers
.scrapy/httpcache/NewsSpider/05/05093616a43241001518fb5af8c0c2dd50813db4/: meta  pickled_meta  request_body  response_headers
.scrapy/httpcache/NewsSpider/05/05468e9e4ecf633a5dd42a7cb3168e90e5a222ed/: meta  pickled_meta  request_body  response_body  (+1 more)
MainParserDirectory/: cs_matches_settings.py  cs_news_settings.py  middlewares.py  pipelines.py  settings.py
MainParserDirectory/spiders/: cs_live&scheduled_matches_parser.py  cs_live_scheduled_matches_parser.py  cs_live_scheduled_matches_tournaments_parser.py  cs_matches_parser.py  cs_news_parser.py  cs_past_matches_parser.py  cs_players_parser.py  cs_teams_parser.py
newsparser/: middlewares.py  settings.py
newsparser/spiders/: news_parser.py
pg_db/init-scripts/: entrypoint.sh
project.egg-info/: SOURCES.txt  entry_points.txt
src/: Dockerfile  main.py  schedule_cs_create_matches.py  schedule_cs_live_matches_tournaments.py  schedule_cs_news.py  schedule_cs_past_matches.py  schedule_cs_players.py  schedule_cs_teams.py  schedule_cs_update_matches.py  schedule_cs_update_tournaments.py  scrapy.cfg  scrapyd.conf  setup.py
src/schedulers/: schedule_cs_news.py  schedule_cs_past_matches.py  schedule_cs_teams.py  schedule_cs_update_matches.py  scheduler.py
src/webnews_parser/: items.py  loaders.py  middlewares.py  pipelines.py  scheduler.py  settings.py
src/webnews_parser/spiders/: cs_live_scheduled_matches_tournaments_spider.py  cs_news_spider.py  cs_past_matches_spider.py  cs_players_spider.py  cs_teams_spider.py  cs_update_live_scheduled_matches.py  cs_update_tournaments_spider.py
src/webnews_parser/utils/: spider_utils.py
tutorial/: js_code.txt  settings.py
tutorial/spiders/: pc_enjoyer.py
webnews_parser/: Dockerfile  main.py  scrapyd.conf
webnews_parser/schedulers/: schedule_cs_create_matches.py  schedule_cs_news.py  schedule_cs_past_matches.py  schedule_cs_players.py  schedule_cs_teams.py  schedule_cs_update_matches.py  schedule_cs_update_tournaments.py  scheduler.py
webnews_parser/webnews_parser/: items.py  loaders.py  middlewares.py  pipelines.py  settings.py
webnews_parser/webnews_parser/spiders/: cs_create_live_scheduled_matches.py  cs_live_scheduled_matches_tournaments_spider.py  cs_news_spider.py  cs_past_matches_spider.py  cs_players_spider.py  cs_teams_spider.py  cs_update_live_scheduled_matches.py  cs_update_tournaments_spider.py
webnews_parser/webnews_parser/utils/: db_utils.py  spider_utils.py
(+3916 files in other folders)
